# eth-log-indexer

./: .env.sample  .gitignore  Cargo.toml  Makefile  Readme.md  docker-compose.yml
docs/: report.md  requirements.md
migrations/: 20250808114301_init.down.sql  20250808114301_init.up.sql  20250813092749_blocks.up.sql
src/: config.rs  domain.rs  indexer.rs  main.rs
src/eth/: config.rs  provider.rs
src/store/: mod.rs
src/store/sqlite/: config.rs  mod.rs  query.rs
