[package]
name = "eth-log-indexer"
version = "0.1.0"
edition = "2024"

rust-version = "1.86.0"

[dependencies]
tokio = { version = "1" , features = ["full"]}
sqlx = { version = "0.8", features = [ "runtime-tokio" , "sqlite", "sqlx-macros", "migrate", "chrono"] }
alloy = { version = "1.0", features = ["provider-anvil-node"]}
dotenvy = "0.15.7"
envconfig = "0.11.0"
tracing= "0.1"
tracing-subscriber = "0.3"
tower = "0.5.2"
eyre = "0.6.12"
async-trait = "0.1.88"
reqwest = { version = "0.12.22" }
url = "2.5.4"
itertools = "0.14.0"

[dev-dependencies]
testcontainers = { version = "=0.24.0" }
testcontainers-modules = { version = "=0.12.1", features = ["anvil"] }
